hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: app1
    image: supergiantkir/animals:bear
    volumeMounts:
    - name: redis-persistent-storage
      mountPath: /storage
  - name: app2
    image: yanivomc/spring-music:latest
    volumeMounts:
    - name: redis-persistent-storage
      mountPath: /storage
  volumes:
  - name: app-storage
    hostPath:
      # directory location on host
      path: /tmp/files
      # this field is optional
      type: Directory
