hostbased-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - basic'
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /


spec:
  ingressClassName: nginx
  rules:
  - host: "tj1.34.241.105.104.nip.io"  
    http:
      paths:
      - path: /bear(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: bear-service
             port:
                number: 80
  - host: "tj1.34.241.105.104.nip.io"  
    http:          
      paths:      
      - path: /moose(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: moose-service
             port:
                number: 80
